--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
 		"vite": "^5.0.3"
 	},
 	"dependencies": {
+		"@supabase/supabase-js": "^2.45.3",
 		"chart.js": "^3.7.0",
 		"date-fns": "^2.29.3",
 		"lucide-svelte": "^0.439.0"
