--- a/package.json
+++ b/package.json
@@ -11,7 +11,14 @@
 		"format": "prettier --write .",
 		"clean": "rimraf node_modules .svelte-kit",
 		"clean:all": "rimraf node_modules .svelte-kit build",
-		"reset": "bun run clean && bun install"
+		"reset": "bun run clean && bun install",
+		"prepare": "husky install"
+	},
+	"lint-staged": {
+		"*.{js,ts,svelte}": [
+			"eslint --fix",
+			"svelte-check --tsconfig ./tsconfig.json"
+		]
 	},
 	"devDependencies": {
 		"@fontsource/fira-mono": "^5.0.0",
@@ -25,22 +32,27 @@
 		"@tailwindcss/forms": "^0.5.9",
 		"@tailwindcss/typography": "^0.5.15",
 		"@types/eslint": "^9.6.0",
+		"@typescript-eslint/eslint-plugin": "^8.4.0",
+		"@typescript-eslint/parser": "^8.4.0",
 		"autoprefixer": "^10.4.7",
-		"eslint": "^9.0.0",
+		"eslint": "^9.10.0",
 		"eslint-config-prettier": "^9.1.0",
-		"eslint-plugin-svelte": "^2.36.0",
+		"eslint-plugin-svelte": "^2.43.0",
 		"flowbite": "^2.5.1",
 		"flowbite-svelte": "^0.46.16",
 		"globals": "^15.0.0",
+		"husky": "^8.0.0",
+		"lint-staged": "^15.2.10",
 		"postcss": "^8.4.14",
 		"prettier": "^3.1.1",
 		"prettier-plugin-svelte": "^3.1.2",
 		"rimraf": "^5.0.0",
 		"svelte": "^4.2.7",
-		"svelte-check": "^4.0.0",
+		"svelte-check": "^4.0.1",
+		"svelte-eslint-parser": "^0.41.0",
 		"svelte-heros": "^6.0.3",
 		"tailwindcss": "^3.1.5",
-		"typescript": "^5.0.0",
+		"typescript": "^5.5.4",
 		"typescript-eslint": "^8.0.0",
 		"vite": "^5.0.3"
 	},
